tests/gen/testdata/configs/fail/platform_extension_overlay_vcn_native_cni.jsonnet
// OKE overlay network shape cannot request the VCN native cluster CNI
// error_contains: config_params.cni_type overlay requires config_params.cni flannel
{
  hub: { kind: 'hub_e', network: { vcn: '10.0.0.0/21' } },
  environments: {
    prod: {
      platforms: {
        oke: {
          network: { vcn: '10.0.80.0/20' },
          extension: {
            type: 'oke_simple',
            params: {
              kubernetes_version: 'v1.35.2',
              services_cidr: '10.96.0.0/16',
              cni_type: 'overlay',
              cni: 'vcn_native',
              api_endpoint_allowed_cidrs: ['10.0.1.0/24'],
            },
          },
        },
      },
    },
  },
}
